<resources>
    <string name="app_name">ProjectChat</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="projectchat">ProjectChat</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_link"><u>Don\'t have an account? Sign Up</u></string>
    <string name="sign_in_link"><u>Already have an account? Sign In</u></string>
    <string name="default_web_client_id">YOUR_DEFAULT_WEB_CLIENT_ID</string>
</resources>